force-app/main/default/objects/COBIDVSearchResult__c/COBIDVSearchResult__c.object-meta.xml
<CustomObject>
    <description>The data source details in the IDV search result of the COB Application</description>
    <label>COB IDV Search Result</label>
    <nameField>
        <displayFormat>COBIDV-{00000000}</displayFormat>
        <label>COB IDV Search Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>COB IDV Search Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>