force-app/main/default/objects/COBIDVSearchResult__c/fields/CustomerOnboardingApplication__c.field-meta.xml
<CustomField>
    <fullName>CustomerOnboardingApplication__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>Master-detail relationship to the Customer Onboarding Application</description>
    <label>Customer Onboarding Application</label>
    <referenceTo>CustomerOnboardingApplication__c</referenceTo>
    <relationshipLabel>COB IDV Search Results</relationshipLabel>
    <relationshipName>COBIDVSearchResults</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>