force-app/main/default/objects/COBIDVSearchResult__c/fields/MatchIndicator__c.field-meta.xml
<CustomField>
    <fullName>MatchIndicator__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The result passed back from a single downstream provider (PASS, FAIL etc)</description>
    <label>Match Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>