force-app/main/default/objects/COBIDVSearchResult__c/fields/PersonaDataSource__c.field-meta.xml
<CustomField>
    <fullName>PersonaDataSource__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>A composite key for uniquely identifying an IDV data source for an individual, allowing subsequent results to be written as tracked changes to the same record.</description>
    <externalId>true</externalId>
    <label>Persona Data Source</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>