force-app/main/default/objects/COBIDVSearchResult__c/fields/PersonaId__c.field-meta.xml
<CustomField>
    <fullName>PersonaId__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The unique identifier for the prospect.</description>
    <label>Persona Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>