force-app/main/default/objects/COBIDVSearchResult__c/fields/SearchName__c.field-meta.xml
<CustomField>
    <fullName>SearchName__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The code name for a single downstream provider used by IDV.</description>
    <label>Search Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>