force-app/main/default/objects/COBIDVSearchResult__c/fields/SearchResultDetail__c.field-meta.xml
<CustomField>
    <fullName>SearchResultDetail__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>Descriptive text explaining the reason for a particular result from a given provider. Often this will contain error text that allows an agent determine the best approach for fallout resolution.</description>
    <label>Search Result Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>