force-app/main/default/objects/COBIDVSearchResult__c/fields/SubmittedAt__c.field-meta.xml
<CustomField>
    <fullName>SubmittedAt__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The time stamp generated by Salesforce at the time of upsertion.</description>
    <label>Submitted At</label>
    <type>DateTime</type>
</CustomField>